2003-12-12  Dodji Seketeli <dodji@gnome.org>

	* docs/examples/selection-example-1.c: a bit of cleanup 
	and bug fix here.
	* docs/examples/selection-example-1.css: added more test cases.
	
2003-12-11  Dodji Seketeli <dodji@gnome.org>

	* configure.in: updated version numbers for 0.4.
	* src/layeng/cr-lay-eng.[ch]: 
	(cr_lay_eng_style_to_pango_font_attribute): added this so
	that the pango dependancy comes into the layout engine.
	* src/parser/cr-parser.c,src/parser/cr-selector.h,
	src/parser/cr-stylesheet.h,src/parser/cr-term.[ch],
	src/parser/cr-utils.h: 
	made sure libcroco headers files
	are C++ compilers friendly.
	* src/seleng/Makefile.am: remove pango dependancy from the
	selection engine. Put it in the layout engine.
	* src/seleng/cr-style.[ch]: 
	(cr_style_to_pango_font_attributes): removed this function
	from here and put it in src/layeng/cr-lay-eng.[ch]. This way,
	we seleng doesn't depend on pango. Only layout engine does.
	* Makefile.am: big cleanup here.
	* configure.in: make sure seleng, layeng and tests are 
	disabled by default. Added makefiles in docs/ docs/example
	tests/ tests/test-inputs tests/test-output-refs
	* csslint/Makefile.am: cleaned this up. make sure to add
	seleng,layeng and glib compile flags whenever needed.
	* docs/Makefile.am,docs/examples/Makefile.am: new makefiles.
	* src/libcroco.h: removed references to cr-parser-input.h
	* src/layeng/Makefile.am: cleanup, make distcheck is happier.
	* src/parser/Makefile.am: cleanup, make distcheck is happier.
	* src/parser/cr-doc-handler.h: removed reference to cr-parser-input.h
	* src/parser/cr-layout-eng.h,src/parser/cr-parser-input.h: removed these.
	* src/parser/cr-parser.c: 
	(cr_parser_new): fixed a typo here.
	* src/parser/cr-parser.h,src/parser/cr-tknzr.h: 
	removed ref to cr-parser-input.h
	* src/seleng/Makefile.am: cleanup, make distcheck is happier.
	* tests/testctl: exclude makefiles when diffing outputs and re outputs.