@@ -3,6 +3,7 @@
 [attr4|=val4] {prop7: val7}
 [attr3~=val3_2] {prop6: val6}
 [attr2=val2] {prop5: val5}
+E2[attr2=val2] {prop8: val8}
 E0 {prop0: val0}
 E0+E1{pro1:val1} 
 E1 E1-1 {prop2: val2}
